# nptyping2

./: README.md  pyproject.toml
docs/: example.md
nptyping2/: __init__.py  ndarray.py  shape.py
